--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 cffi==0.8.6
+characteristic==14.3.0
 cryptography==0.7.2
 cssselect==0.9.1
 enum34==1.0.4
 lxml==3.4.1
 pyasn1==0.1.7
+pyasn1-modules==0.0.5
 pycparser==2.10
 pyOpenSSL==0.14
 queuelib==1.2.2
-requests==2.5.1
 Scrapy==0.24.4
+service-identity==14.0.0
 six==1.9.0
 Twisted==14.0.2
+virtualenv==12.0.5
 w3lib==1.11.0
 zope.interface==4.1.2
